# Sesame

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Knowledgegraph.drawio  KnowlegeGraph_clustering.drawio  LICENSE  MANIFEST.in  README.md  build.sh  make.sh  output.txt  pyproject.toml  run.sh  setup.py
.github/workflows/: clang-format-check.yml  cmake.yml  tests.yml  wheels.yml
Clustream/: CMakeLists.txt  Clustream.cpp  Clustream.h  data.REMOVED.git-id
Clustream/Clu/: CluStream.h  Clustream.cpp  Clutest  FeatureVector.h  Makefile  bindings.cpp  kernel.cpp  kernel.h  main.cpp  microcluster.cpp  microcluster.h  try  try.cpp
Clustream/python/: BIRCH.ipynb  Clustream.py  MicroCluster.py
benchmark/: CMakeLists.txt  README.md
benchmark/benchmark/: testDBStream.sh  testDenStream.sh  test_CluStream.sh
benchmark/benchmark/testBash/: test.sh  testDBStream.sh  testDStream.sh  testDenStream.sh  test_CluStream.sh
benchmark/datasets/: .gitattributes  CoverType.txt  D1.txt  D2.txt  D3.txt  D4.txt  EDS_O.txt.REMOVED.git-id  INSECTS.txt  KDD99_F.txt  Mock.txt  ODS.txt  Zelnik.txt  hyperPlane.txt.REMOVED.git-id  new.txt.REMOVED.git-id  powersupply.txt  powersupply.txt.REMOVED.git-id
benchmark/datasets/Diamond/: D1.txt  D2.txt  D3.txt  D5.txt  D6.txt  D7.txt  D8.txt
benchmark/include/: Benchmark.hpp
benchmark/include/util/: BenchmarkUtils.hpp
benchmark/scripts/: Draw_Picture.py  all.sh  birch.sh  clustream.sh  cover.sh  create.sql  dbstream.sh  draw.py  eds.sh  etb-insects.sql  etb-sensor.sql  g1.sh  g3.sh  g4.sh  g5.sh  g8.sh  g9.sh  gen_flags.js  insects.sh  inserts.sh  kdd.sh  max.sql  opt-insects.sh  part.sh  perf-birch.sh  perf-clustream.sh  perf-dbstream.sh  perf-denstream.sh  perf-dstream.sh  perf-edmstream.sh  perf-g1.sh  perf-g10.sh  perf-g2.sh  perf-g3.sh  perf-g4.sh  perf-g5.sh  perf-g6.sh  perf-g7.sh  perf-g8.sh  perf-g9.sh  (+15 more)
benchmark/scripts/Raw/: CMM.csv  Execution_Time_Breakdown_KDD.csv  Progressiveness_Insects.csv  Purity.csv  Throughput.csv
benchmark/scripts/raw/: cmm.csv  etb-fct.csv  etb-insects.csv  etb-kdd.csv  etb-sensor.csv  prog-sensor.csv
benchmark/src/: Benchmark.cpp
benchmark/src/util/: BenchmarkUtils.cpp
benchmark/test/: config_test.sh  realworld_test.sh
calculation/: Gatherer.py  data.json  data_core.json  data_divider.json  data_lv1.json  data_ports.json  data_ports_breakdown.json  output.txt
cmake/: FindLog4cxx.cmake  default.cmake  macros.cmake
docs/: practice.drawio
include/APIs/: APIs.h
include/Algorithm/: Algorithm.hpp  AlgorithmFactory.hpp  Benne.hpp  Birch.hpp  CluEStream.hpp  CluStream.hpp  DBStream.hpp  DStream.hpp  (+6 more)
practice/StreamKM++/: CMakeLists.txt  README.md
practice/StreamKM++/Data/: 1.txt
practice/StreamKM++/DataStructure/: Point.cpp  Point.hpp  TreeCoreset.cpp  TreeCoreset.hpp
practice/StreamKM++/Entrance/: StreamKM++.cpp
practice/StreamKM++/EvaluationMetrics/: KmeansCosts.cpp
practice/StreamKM++/OfflineClustering/: LloydPlusPlus.cpp  LloydPlusPlus.hpp  kMeansUtilityFunctions.cpp  kMeansUtilityFunctions.hpp
practice/StreamKM++/Utility/: DatasetFunctions.cpp  DatasetFunctions.hpp  featurepp.hpp  featuretools.cpp  mt19937ar.hpp
practice/StreamKM++/WindowModel/LandmarkWindow/: StreamingCoreset.hpp
practice/StreamKM++/doc/: coresetConstruction.drawio
python/: README.md  demo.py
scripts/: .gitignore  README  README.md  create.sql  draw.py  gen_flags.js  pprof.sh  query.sh  run.sh
src/: CMakeLists.txt  Sesame.cpp  Sesame.hpp  Struct.cpp  Struct.hpp  Window.cpp  Window.hpp  module.c  module.h  program.c
src/Algorithm/: Algorithm.cpp  AlgorithmFactory.cpp  Benne.cpp  Birch.cpp  CMakeLists.txt  CluEStream.cpp  CluStream.cpp  DBStream.cpp  DStream.cpp  DenStream.cpp  EDMStream.cpp  Modular.cpp  Modular.hpp  SlidingWindowClustering.cpp  StreamKM.cpp
src/Algorithm/ConceptDrift/: CMakeLists.txt  MicroClusters.cpp  MicroClusters.hpp
src/Algorithm/DataStructure/: CFTree.cpp  CMakeLists.txt  Cache.cpp  CharacteristicsVector.cpp  CoresetTree.cpp  CoresetTree.hpp  DPNode.cpp  DPTree.cpp  DataStructure.cpp  DataStructureFactory.cpp  DensityGrid.cpp  FeatureVector.cpp  GridCluster.cpp  MeyersonSketch.cpp  MicroCluster.cpp  OutlierResevoir.cpp  Point.cpp  Snapshot.cpp  TreeNode.cpp  WeightedAdjacencyList.cpp
src/Algorithm/DesignAspect/: CMakeLists.txt  SlidingWindowClustering.cpp  V1.cpp  V10.cpp  V16.cpp  V2.cpp  V3.cpp  V4.cpp  V5.cpp  V6.cpp  V7.cpp  V8.cpp  V9.cpp
src/Algorithm/OfflineClustering/: CMakeLists.txt  ConnectedRegions.cpp  DBSCAN.cpp  DbScan.hpp  KMeans.cpp  KMeans.hpp  Kmeans.cpp  OfflineClustering.cpp  OfflineClustering.hpp
src/Algorithm/OfflineRefinement/: CMakeLists.txt  ConnectedRegions.cpp  DBSCAN.cpp  KMeans.cpp  OfflineRefinement.cpp
src/Algorithm/OutlierDetection/: CMakeLists.txt  OutlierDetection.cpp  OutlierDetection.hpp
src/Algorithm/WindowModel/: CMakeLists.txt  DampedWindow.cpp  LandmarkWindow.cpp  Window.cpp  WindowFactory.cpp  WindowModel.cpp  WindowModel.hpp
src/Algorithm/WindowModel/LandmarkWindow/: StreamingCoreset.cpp
test/: CMakeLists.txt  SystemTest.cpp
test/DesignAspect/: SlidingWindowClusteringTest.cpp  V10Test.cpp  V1Test.cpp  V2Test.cpp  V3Test.cpp  V4Test.cpp  V5Test.cpp  V6Test.cpp  V7Test.cpp  V8Test.cpp  V9Test.cpp
test/Generic/: GenericTest.cpp
test/System/: BirchTest.cpp  CluEStreamTest.cpp  CluStreamTest.cpp  DBStreamTest.cpp  DStreamTest.cpp  DenStreamTest.cpp  EDMStreamTest.cpp  GenericTest.cpp  SLKMeans.cpp  SlidingWindowClusteringTest.cpp  StreamKMTest.cpp
test/SystemTest/: BirchTest.cpp  CluStreamTest.cpp  DBStreamTest.cpp  DStreamTest.cpp  DenStreamTest.cpp  EDMStreamTest.cpp  SlidingWindowClusteringTest.cpp  StreamKMTest.cpp
test/SystemTest/DesignAspect/: V1.cpp  V1Test.cpp  V2Test.cpp  V3.cpp  V3Test.cpp  V4Test.cpp  V5Test.cpp  V6Test.cpp  V7Test.cpp  V8Test.cpp
test/datasets/: CoverType.txt.REMOVED.git-id  EDS.txt.REMOVED.git-id  EDS_O.txt  KDD99.txt.REMOVED.git-id  ODS.txt.REMOVED.git-id  sensor.txt.REMOVED.git-id
test/datasets/Diamond/: D3.txt  D4.txt  D5.txt  D6.txt  D8.txt  D9.txt
(+399 files in other folders)
