[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.12.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysame"
version = "0.1.0"
authors = [{ name = "Zhengru Wang", email = "wangshaun@outlook.com" }]
description = "Stream clustering algorithms on modern hardware"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/intellistream/Sesame"
Issues = "https://github.com/intellistream/Sesame/issues"
