add_source_sesame(
        StreamKM.cpp
        CluStream.cpp
        Birch.cpp
        DenStream.cpp
        DBStream.cpp
        Algorithm.cpp
        AlgorithmFactory.cpp
)
add_subdirectory(ConceptDrift)
add_subdirectory(DataStructure)
add_subdirectory(OfflineClustering)
add_subdirectory(OutlierDetection)
add_subdirectory(WindowModel)